# SMG-App

./: .gitignore  README.md  account  kivy_data.db  pyproject.toml
app/: __init__.py  app.kv  client_management.py  database.py  gestaocliente.py  gestaousuario.py  hotReload.py  hot_reload.py  kivy_data.db  login_management.py  main.py  main2.py  user_management.py
