[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AlexSJ33 <alevildark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = "^1.1.1"


[tool.poetry.group.dev.dependencies]
Cython = "^0.29.32"
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
